48-ingress-resource.yaml
# ingress resources defines how traffic should be routed to frontend services in cluster , 
# configuration defined in annotations to create alb ,listener,listenerrules,tg and can route traffic based on host based or path based routing to target servcies which will endpointslice to get ipaddress of ports directly
# ingress also supports http redirection,tls termination


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roboshop-ingress
  namespace: roboshop
spec:
 rules:
    - host: shop.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 8080

# https://shop.example.com/
#           ↓
# frontend Service:80
#           ↓
# frontend Pods

# https://shop.example.com/api/products
#           ↓
# catalogue Service:8080
#           ↓
# catalogue Pods


#ingress resources is a resources containing routing rules ,and configuration to create alb
#ingress controller is software that runs as pod inside cluster and observers apiserver for ingress resource


# Ingress backend:
# service.name = catalogue
# service.port = 8080
#              ↓
# Service:
# selector = app=catalogue
#              ↓
# Pods:
# label = app=catalogue
